--- a/Frontend/src/app/components/register/register.component.html
+++ b/Frontend/src/app/components/register/register.component.html
@@ -72,7 +72,14 @@
               placeholder="Area" [(ngModel)]="area" required #areaInput="ngModel">
             <div *ngIf="areaInput.touched && !area" class="text-red-500">Area is required</div>
           </div>
-
+          <!-- Image URL Field -->
+          <div>
+            <label for="image_url" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Image
+              URL</label>
+            <input type="text" name="image_url" id="image_url"
+              class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+              placeholder="Image URL" [(ngModel)]="img" #imageUrlInput="ngModel">
+          </div>
           <!-- Terms and Conditions -->
           <div class="flex items-start">
             <div class="flex items-center h-5">
