--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -5,6 +5,8 @@
       <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">CodeMasterMentors</span>
     </a>
     <div class="flex md:order-2 rtl:space-x-reverse">
+
+
       <!-- Mostrar botones de inicio de sesión y registro solo si el usuario no está autenticado -->
       <a *ngIf="!isLoggedIn" routerLink="/login" class="ml-2">
         <button type="button"
@@ -14,24 +16,49 @@
         <button type="button"
           class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Register</button>
       </a>
+
+
       <!-- Mostrar botón de logout solo si el usuario está autenticado -->
-      <a *ngIf="isLoggedIn" routerLink="/logout" class="ml-2" (click)="logout()">
+      <!-- <a *ngIf="isLoggedIn" routerLink="/logout" class="ml-2" (click)="logout()">
         <button type="button"
           class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Logout</button>
+      </a> -->
+
+      <a *ngIf="isLoggedIn" class="ml-2 relative" (click)="toggleDropdown()">
+        <button type="button"
+          class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Profile</button>
+        <div *ngIf="showDropdown"
+          class="absolute right-0 mt-2 w-48 bg-white dark:bg-gray-900 border border-gray-200 dark:border-gray-600 rounded-lg shadow-lg z-10">
+          <a href="#"
+            class="block px-4 py-2 text-gray-800 hover:bg-gray-100 dark:text-white dark:hover:bg-gray-800">Profile</a>
+          <a href="#"
+            class="block px-4 py-2 text-gray-800 hover:bg-gray-100 dark:text-white dark:hover:bg-gray-800">Settings</a>
+          <a href="#"
+            class="block px-4 py-2 text-gray-800 hover:bg-gray-100 dark:text-white dark:hover:bg-gray-800">Help</a>
+          <a *ngIf="isLoggedIn" routerLink="/logout" class="ml-2" (click)="logout()">
+            <button type="button"
+              class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Logout</button>
+          </a>
+        </div>
       </a>
+
+      <!-- Boton util no borrar -->
       <button data-collapse-toggle="navbar-sticky" type="button"
         class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
         aria-controls="navbar-sticky" aria-expanded="false">
       </button>
+
     </div>
+
+
     <!-- Lista de enlaces de navegación (puede que desees ajustarlos según tus necesidades) -->
     <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
       <ul
         class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
         <li>
-          <a href="/login"
+          <a href="/home"
             class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500"
-            aria-current="page">Login</a>
+            aria-current="page">Home</a>
         </li>
         <li>
           <a href=""
