--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -1,1 +1,58 @@
-Hola me llamo pepe
+<!-- <section class="bg-indigo-500 flex items-center justify-center">
+    <div class="container mx-auto py-8">
+        <input
+            class="w-3/4  h-10 md:h-12 px-3 rounded mb-8 focus:outline-none focus:shadow-outline text-lg md:text-xl px-8 shadow-lg mx-auto"
+            type="search" placeholder="Search...">
+        <nav class="flex">
+             <a *ngFor="let language of programmingLanguages"
+                class="no-underline text-white py-3 px-4 font-medium mx-3 bg-indigo hover:bg-indigo-darker" href="#">
+                {{ language.languageName }}
+            </a>
+        </nav>
+    </div>
+</section>
+
+<div>
+  <div class="bg-white rounded-lg overflow-hidden shadow-2xl xl:w-1/5 lg:w-1/4 md:w-1/3 sm:w-1/2 m-2"
+      *ngFor="let teacher of teachers">
+      <div class="p-6">
+          <div class="mt-2">
+            <span>Precio por hora: {{ teacher.price_hour }}</span>
+            <span class="text-gray-600 text-sm">Idioma: {{ teacher.languages }}</span>
+          </div>
+      </div>
+  </div>
+</div> -->
+
+<!-- Este código no es relevante si estás mostrando los profesores con el ngFor -->
+<!-- <ul>
+  <li *ngFor="let teacher of teachers">
+    {{ teacher.name }} -
+  </li>
+</ul> -->
+<div>
+<div class="table-responsive">
+    <table class="table table-primary">
+        <thead>
+            <tr>
+                <th scope="col">Column 1</th>
+                <th scope="col">Column 2</th>
+                <th scope="col">Column 3</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let teacher of teachers" class="">
+                <td scope="row">{{teacher.price_hour}}</td>
+                <td>{{teacher.languages}}</td>
+                <td>R1C3</td>
+            </tr>
+            <tr class="">
+                <td scope="row">Item</td>
+                <td>Item</td>
+                <td>Item</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
+</div>
