--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -1,58 +1,50 @@
-<!-- <section class="bg-indigo-500 flex items-center justify-center">
+<section class="bg-indigo-500 flex items-center justify-center">
     <div class="container mx-auto py-8">
         <input
             class="w-3/4  h-10 md:h-12 px-3 rounded mb-8 focus:outline-none focus:shadow-outline text-lg md:text-xl px-8 shadow-lg mx-auto"
             type="search" placeholder="Search...">
         <nav class="flex">
-             <a *ngFor="let language of programmingLanguages"
+             <a *ngFor="let language of programmingLanguages.data"
                 class="no-underline text-white py-3 px-4 font-medium mx-3 bg-indigo hover:bg-indigo-darker" href="#">
                 {{ language.languageName }}
             </a>
         </nav>
     </div>
 </section>
+<div class="antialiased text-gray-900 ">
+    <div *ngFor="let user of users.data" class="bg-gray-200 min-h-screen p-8 flex items-center justify-center">
+        <div *ngFor="let teacher of teachers.data" class="bg-white rounded-lg overflow-hidden shadow-2xl xl:w-1/5 lg:w-1/4 md:w-1/3 sm:w-1/2">
+            <!--E11-->
+            <!-- <div class="h-48 bg-cover bg-center" style="background-image:url('https://images.unsplash.com/photo-1570797197190-8e003a00c846?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=968&q=80')"></div>-->
+            <img class="h-48 w-full object-cover object-end"
+                src="{{user.img}}"
+                alt="Home in Countryside" />
+            <div class="p-6">
+                <div class="flex items-baseline">
+                    <span
+                        class="inline-block bg-teal-200 text-teal-800 py-1 px-4 text-xs rounded-full uppercase font-semibold tracking-wide">{{teacher.languages}}</span>
+                    <div class="ml-2 text-gray-600 text-xs uppercase font-semibold tracking-wide">
+                        {{user.area}}
+                    </div>
+                </div>
+                <h4 class="mt-2 font-semibold text-lg leading-tight truncate">{{user.name}}</h4>
 
-<div>
-  <div class="bg-white rounded-lg overflow-hidden shadow-2xl xl:w-1/5 lg:w-1/4 md:w-1/3 sm:w-1/2 m-2"
-      *ngFor="let teacher of teachers">
-      <div class="p-6">
-          <div class="mt-2">
-            <span>Precio por hora: {{ teacher.price_hour }}</span>
-            <span class="text-gray-600 text-sm">Idioma: {{ teacher.languages }}</span>
-          </div>
-      </div>
-  </div>
-</div> -->
-
-<!-- Este código no es relevante si estás mostrando los profesores con el ngFor -->
-<!-- <ul>
-  <li *ngFor="let teacher of teachers">
-    {{ teacher.name }} -
-  </li>
-</ul> -->
-<div>
-<div class="table-responsive">
-    <table class="table table-primary">
-        <thead>
-            <tr>
-                <th scope="col">Column 1</th>
-                <th scope="col">Column 2</th>
-                <th scope="col">Column 3</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let teacher of teachers" class="">
-                <td scope="row">{{teacher.price_hour}}</td>
-                <td>{{teacher.languages}}</td>
-                <td>R1C3</td>
-            </tr>
-            <tr class="">
-                <td scope="row">Item</td>
-                <td>Item</td>
-                <td>Item</td>
-            </tr>
-        </tbody>
-    </table>
-</div>
-
+                <div class="mt-1">
+                    <span>{{teacher.price_hour}}€</span>
+                </div>
+                <div class="mt-2 flex items-center">
+                    <span class="text-teal-600 font-semibold">
+                        <span>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                            <span class="ml-2 text-gray-600 text-sm">34 reviews</span>
+                        </span>
+                    </span>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
