--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -29,8 +29,8 @@
         <img src="{{users.img}}" alt="User Image" class="h-8 w-8 rounded-full">
         <div *ngIf="showDropdown"
           class="absolute right-0 mt-2 w-48 bg-white dark:bg-gray-900 border border-gray-200 dark:border-gray-600 rounded-lg shadow-lg z-10">
-          <a href="#"
-            class="block px-4 py-2 text-gray-800 hover:bg-gray-100 dark:text-white dark:hover:bg-gray-800">Profile</a>
+          <a *ngIf="isLoggedIn" [routerLink]="['/profile', userId]"
+           class="block px-4 py-2 text-gray-800 hover:bg-gray-100 dark:text-white dark:hover:bg-gray-800">Profile</a>
           <a href="#"
             class="block px-4 py-2 text-gray-800 hover:bg-gray-100 dark:text-white dark:hover:bg-gray-800">Settings</a>
           <a href="#"
