--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -2,11 +2,9 @@
     <div class="flex flex-wrap -mx-4">
         <div *ngFor="let user of users.data" class="w-full sm:w-1/2 md:w-1/3 lg:w-1/3 xl:w-1/3 px-4 mb-8">
             <div *ngFor="let teacher of teachers.data" class="bg-white rounded-lg overflow-hidden shadow-2xl">
-                <!--E11-->
-                <!-- <div class="h-48 bg-cover bg-center" style="background-image:url('https://images.unsplash.com/photo-1570797197190-8e003a00c846?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=968&q=80')"></div>-->
                 <img class="h-48 w-full object-cover object-end"
                     src="{{user.img}}"
-                    alt="Home in Countryside" />
+                    alt="User Image" />
                 <div class="p-6">
                     <div class="flex items-baseline">
                         <span
@@ -18,7 +16,7 @@
                     <h4 class="mt-2 font-semibold text-lg leading-tight truncate">{{user.name}}</h4>
 
                     <div class="mt-1">
-                        <span>{{teacher.price_hour}}€</span>
+                        <span>{{teacher.price_hour}}€/h</span>
                     </div>
                     <div class="mt-2 flex items-center">
                         <span class="text-teal-600 font-semibold">
