--- a/Frontend/src/app/components/register/register.component.html
+++ b/Frontend/src/app/components/register/register.component.html
@@ -27,14 +27,20 @@
               [(ngModel)]="password" required #passwordInput="ngModel">
             <div *ngIf="passwordInput.touched && !password" class="text-red-500">Password is required</div>
           </div>
-          <!-- Role Field -->
           <div>
             <label for="role" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Role</label>
-            <input type="text" name="role" id="role"
+            <select name="role" id="role"
               class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-              placeholder="Role" [(ngModel)]="role_id" required #roleIdInput="ngModel">
+              [(ngModel)]="role_id" required #roleIdInput="ngModel">
+              <option value="" disabled>Select a role</option>
+              <ng-container *ngFor="let role of roles.data">
+                <option *ngIf="role.id == 1 || role.id == 2" [value]="role.id">{{ role.name }}</option>
+              </ng-container>
+            </select>
             <div *ngIf="roleIdInput.touched && !role_id" class="text-red-500">Role is required</div>
           </div>
+
+
           <!-- Name Field -->
           <div>
             <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Name</label>
@@ -72,13 +78,14 @@
               placeholder="Area" [(ngModel)]="area" required #areaInput="ngModel">
             <div *ngIf="areaInput.touched && !area" class="text-red-500">Area is required</div>
           </div>
+
           <!-- Image Upload Field -->
           <div>
             <label for="profile_image" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Profile
               Image</label>
-            <input type="file" name="profile_image" id="profile_image" accept="image/*"
+            <input type="text" name="profile_image" id="profile_image" accept="image/*"
               class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-              [(ngModel)]="img" #profileImageInput="ngModel">
+              [(ngModel)]="img" #profileImageInput="ngModel" placeholder="ImageURL">
           </div>
           <!-- Terms and Conditions -->
           <div class="flex items-start">
