--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -1,37 +1,57 @@
-<div class="antialiased text-gray-900">
-    <div class="flex flex-wrap -mx-4">
-        <div *ngFor="let user of users.data" class="w-full sm:w-1/2 md:w-1/3 lg:w-1/3 xl:w-1/3 px-4 mb-8">
-            <div *ngFor="let teacher of teachers.data" class="bg-white rounded-lg overflow-hidden shadow-2xl">
-                <img class="h-48 w-full object-cover object-end"
-                    src="{{user.img}}"
-                    alt="User Image" />
-                <div class="p-6">
-                    <div class="flex items-baseline">
-                        <span
-                            class="inline-block bg-teal-200 text-teal-800 py-1 px-4 text-xs rounded-full uppercase font-semibold tracking-wide">{{teacher.languages}}</span>
-                        <div class="ml-2 text-gray-600 text-xs uppercase font-semibold tracking-wide">
-                            {{user.area}}
-                        </div>
-                    </div>
-                    <h4 class="mt-2 font-semibold text-lg leading-tight truncate">{{user.name}}</h4>
+<!-- Parte del codigo donde se muestra el buscador de la web -->
+<div
+  class="bg-gray-100 border border-transparent focus-within:border-blue-500 flex px-6 rounded-full h-9 lg:w-2/4 mt-3 mx-auto max-lg:mt-6">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 192.904 192.904" width="16px"
+    class="fill-gray-600 mr-3 rotate-90">
+    <path
+      d="m190.707 180.101-47.078-47.077c11.702-14.072 18.752-32.142 18.752-51.831C162.381 36.423 125.959 0 81.191 0 36.422 0 0 36.423 0 81.193c0 44.767 36.422 81.187 81.191 81.187 19.688 0 37.759-7.049 51.831-18.751l47.079 47.078a7.474 7.474 0 0 0 5.303 2.197 7.498 7.498 0 0 0 5.303-12.803zM15 81.193C15 44.694 44.693 15 81.191 15c36.497 0 66.189 29.694 66.189 66.193 0 36.496-29.692 66.187-66.189 66.187C44.693 147.38 15 117.689 15 81.193z">
+    </path>
+  </svg>
+  <input type='email' placeholder='Search...'
+    class="w-full outline-none bg-transparent text-gray-600 font-semibold text-[15px]" />
+</div>
+<br>
 
-                    <div class="mt-1">
-                        <span>{{teacher.price_hour}}€/h</span>
-                    </div>
-                    <div class="mt-2 flex items-center">
-                        <span class="text-teal-600 font-semibold">
-                            <span>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="far fa-star"></i>
-                                <span class="ml-2 text-gray-600 text-sm">34 reviews</span>
-                            </span>
-                        </span>
-                    </div>
-                </div>
+
+<!-- Parte del código donde se muestran las cards con la info de la base de datos -->
+<div class="antialiased text-gray-900">
+  <div class="flex flex-wrap -mx-4">
+    <ng-container *ngFor="let user of users.data">
+      <div *ngIf="user.role_id === 2" class="w-full sm:w-1/2 md:w-1/3 lg:w-1/3 xl:w-1/3 px-4 mb-8">
+        <div class="bg-white rounded-lg overflow-hidden shadow-2xl">
+          <img class="h-48 w-full object-cover object-end" src="{{user.img}}" alt="User Image" />
+          <div class="p-6">
+            <div class="flex items-baseline">
+              <ng-container *ngFor="let teacher of teachers.data">
+              <span  *ngIf="teacher.user_id === user.id"
+                class="inline-block bg-teal-200 text-teal-800 py-1 px-4 text-xs rounded-full uppercase font-semibold tracking-wide">{{teacher.languages}}</span>
+              </ng-container>
+              <div class="ml-2 text-gray-600 text-xs uppercase font-semibold tracking-wide">
+                {{user.area}}
+              </div>
             </div>
+            <h4 class="mt-2 font-semibold text-lg leading-tight truncate">{{user.name}}</h4>
+
+            <ng-container *ngFor="let teacher of teachers.data">
+              <div class="mt-1" *ngIf="teacher.user_id === user.id">
+                <span>{{teacher.price_hour}}€/h</span>
+              </div>
+            </ng-container>
+            <div class="mt-2 flex items-center">
+              <span class="text-teal-600 font-semibold">
+                <span>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="far fa-star"></i>
+                  <span class="ml-2 text-gray-600 text-sm">34 reviews</span>
+                </span>
+              </span>
+            </div>
+          </div>
         </div>
-    </div>
+      </div>
+    </ng-container>
+  </div>
 </div>
