--- a/Frontend/src/app/components/register/register.component.html
+++ b/Frontend/src/app/components/register/register.component.html
@@ -1,14 +1,15 @@
-<section class="bg-gray-50 dark:bg-gray-900">
+
+<section class="mt-16 md:mt-0 relative z-10"> <!-- Agregar mt-16 para ajustar el margen superior -->
   <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
     <a href="#" class="flex items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white">
       <img class="w-8 h-8 mr-2" src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/logo.svg" alt="logo">
-      Flowbite
+      CodeMasterMentors
     </a>
     <div
       class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
       <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
         <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
-          Create an account
+          Unete a CodeMasterMentors
         </h1>
         <form class="space-y-4 md:space-y-6" action="#" (ngSubmit)="onSubmit()">
           <!-- Username Field -->
@@ -107,11 +108,6 @@
           <!-- Error Messages -->
           <div *ngIf="errorMessage" class="text-red-500">{{ errorMessage }}</div>
           <div *ngIf="registerSuccess" class="text-green-500">{{ registerSuccess }}</div>
-          <!-- Login Link -->
-          <p class="text-sm font-light text-gray-500 dark:text-gray-400">
-            Already have an account? <a href="#"
-              class="font-medium text-primary-600 hover:underline dark:text-primary-500">Login here</a>
-          </p>
         </form>
       </div>
     </div>
