--- a/Frontend/src/app/components/profile/profile.component.html
+++ b/Frontend/src/app/components/profile/profile.component.html
@@ -73,7 +73,7 @@
   </main>
 </div>
 
-
+<!--
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link
@@ -192,4 +192,4 @@
             </div>
         </div>
     </main>
-</div>
+</div> -->
