--- a/Frontend/src/app/components/advertisement/advertisement.component.html
+++ b/Frontend/src/app/components/advertisement/advertisement.component.html
@@ -1,1 +1,27 @@
-<p>advertisement works!</p>
+
+
+  <div href="#"
+  class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+
+  <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{ advertisementData.title }}</h5>
+
+  <p class="font-normal text-gray-700 dark:text-gray-400">UserID: {{ advertisementData.user_id }}</p>
+
+  <ng-container *ngFor="let programmingLanguage of programmingLanguages.data">
+    <ng-container *ngIf="programmingLanguage.id === advertisementData.programmingLanguage_id">
+      <p class="font-normal text-gray-700 dark:text-gray-400">Lenguaje de Programación: {{ programmingLanguage.languageName }}</p>
+    </ng-container>
+  </ng-container>
+  <p class="font-normal text-gray-700 dark:text-gray-400">Clase: {{ advertisementData.class }}</p>
+
+  <p class="font-normal text-gray-700 dark:text-gray-400">Acerca de mí: {{ advertisementData.about_me }}</p>
+
+  <p class="font-normal text-gray-700 dark:text-gray-400">Descripción: {{ advertisementData.description }}</p>
+
+  <p class="font-normal text-gray-700 dark:text-gray-400">Precio por Hora: {{ advertisementData.price_hour }} €/h</p>
+
+  <p class="font-normal text-gray-700 dark:text-gray-400">Disponibilidad: {{ advertisementData.disponibility }}</p>
+
+  <p class="font-normal text-gray-700 dark:text-gray-400">Experiencia: {{ advertisementData.experience }}</p>
+
+</div>
