--- a/Frontend/src/app/components/advertisement/advertisement.component.html
+++ b/Frontend/src/app/components/advertisement/advertisement.component.html
@@ -1,6 +1,4 @@
-
-
-  <div href="#"
+<div href="#"
   class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
 
   <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{ advertisementData.title }}</h5>
@@ -12,7 +10,8 @@
   </ng-container>
   <ng-container *ngFor="let programmingLanguage of programmingLanguages.data">
     <ng-container *ngIf="programmingLanguage.id === advertisementData.programmingLanguage_id">
-      <p class="font-normal text-gray-700 dark:text-gray-400">Lenguaje de Programación: {{ programmingLanguage.languageName }}</p>
+      <p class="font-normal text-gray-700 dark:text-gray-400">Lenguaje de Programación: {{
+        programmingLanguage.languageName }}</p>
     </ng-container>
   </ng-container>
   <p class="font-normal text-gray-700 dark:text-gray-400">Clase: {{ advertisementData.class }}</p>
