--- a/Frontend/src/app/components/advertisement/advertisement.component.html
+++ b/Frontend/src/app/components/advertisement/advertisement.component.html
@@ -1,30 +1,41 @@
 <div class="bg-white border border-gray-200 rounded-lg shadow-md p-6 grid grid-cols-1 md:grid-cols-2 gap-4">
-
+  <!-- Información del anuncio -->
   <div>
     <h2 class="text-2xl font-bold text-gray-900 mb-4">{{ advertisementData.title }}</h2>
 
     <ng-container *ngFor="let user of users.data">
       <ng-container *ngIf="user.id === advertisementData.user_id">
-        <img class="text-gray-700 mb-2" src="{{ user.img }}" alt="User Image" />
-        <p class="text-gray-700 mb-2">Nombre: {{ user.name }}</p>
+        <img class="w-16 h-16 rounded-full mb-2" src="{{ user.img }}" alt="User Image" />
+        <p class="text-gray-700 mb-2">Vendedor: {{ user.name }}</p>
       </ng-container>
     </ng-container>
 
     <ng-container *ngFor="let programmingLanguage of programmingLanguages.data">
       <ng-container *ngIf="programmingLanguage.id === advertisementData.programmingLanguage_id">
-        <p class="text-gray-700 mb-2">Lenguaje de Programación: {{ programmingLanguage.languageName }}</p>
+        <p class="text-gray-700 mb-2">Lenguaje: {{ programmingLanguage.languageName }}</p>
       </ng-container>
     </ng-container>
 
     <p class="text-gray-700 mb-2">Precio por Hora: {{ advertisementData.price_hour }} €/h</p>
     <p class="text-gray-700 mb-2">Disponibilidad: {{ advertisementData.disponibility }}</p>
-    <p class="text-gray-700 mb-2">Clase: {{ advertisementData.class }}</p>
+    <p class="text-gray-700 mb-2">Tipo: {{ advertisementData.class }}</p>
   </div>
 
-  <div>
+  <!-- Imagen de la oferta -->
+  <div class="flex items-center justify-center">
+    <ng-container *ngFor="let user of users.data">
+      <ng-container *ngIf="user.id === advertisementData.user_id">
+        <img class="w-full h-auto" src="{{ user.img }}" alt="User Image" />
+        <p class="text-gray-700 mb-2">Vendedor: {{ user.name }}</p>
+      </ng-container>
+    </ng-container>
+    <!-- <img src="{{ user.img }}" alt="Oferta Especial" class="w-full h-auto"> -->
+  </div>
+
+  <!-- Información adicional -->
+  <div class="col-span-2">
     <p class="text-gray-700 mb-2">Acerca de mí: {{ advertisementData.about_me }}</p>
     <p class="text-gray-700 mb-2">Descripción: {{ advertisementData.description }}</p>
     <p class="text-gray-700 mb-2">Experiencia: {{ advertisementData.experience }}</p>
   </div>
-
 </div>
