--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -1,4 +1,3 @@
-<!-- Parte del codigo donde se muestra el buscador de la web -->
 <div
   class="bg-gray-100 border border-transparent focus-within:border-blue-500 flex px-6 rounded-full h-9 lg:w-2/4 mt-3 mx-auto max-lg:mt-6">
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 192.904 192.904" width="16px"
@@ -7,14 +6,29 @@
       d="m190.707 180.101-47.078-47.077c11.702-14.072 18.752-32.142 18.752-51.831C162.381 36.423 125.959 0 81.191 0 36.422 0 0 36.423 0 81.193c0 44.767 36.422 81.187 81.191 81.187 19.688 0 37.759-7.049 51.831-18.751l47.079 47.078a7.474 7.474 0 0 0 5.303 2.197 7.498 7.498 0 0 0 5.303-12.803zM15 81.193C15 44.694 44.693 15 81.191 15c36.497 0 66.189 29.694 66.189 66.193 0 36.496-29.692 66.187-66.189 66.187C44.693 147.38 15 117.689 15 81.193z">
     </path>
   </svg>
-  <input type='email' placeholder='Search...'
-    class="w-full outline-none bg-transparent text-gray-600 font-semibold text-[15px]" />
+  <input type='text' placeholder='Search...'
+    class="w-full outline-none bg-transparent text-gray-600 font-semibold text-[15px]" [(ngModel)]="searchQuery" />
 </div>
 <br>
 
+<!-- Botones de filtro por lenguaje -->
+<div class="flex justify-center mt-4">
+  <button type="button"
+          (click)="filterByLanguage(null)"
+          class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
+    Todos
+  </button>
+  <button *ngFor="let language of programmingLanguages.data"
+          type="button"
+          (click)="filterByLanguage(language.id)"
+          class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
+    {{ language.languageName }}
+  </button>
+</div>
+<br>
 <div class="antialiased text-gray-900">
   <div class="flex flex-wrap -mx-4">
-    <ng-container *ngFor="let advertisement of advertisements.data">
+    <ng-container *ngFor="let advertisement of filteredAdvertisements">
       <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/3 xl:w-1/3 px-4 mb-8">
         <div class="bg-white rounded-lg overflow-hidden shadow-2xl">
           <ng-container *ngFor="let user of users.data">
@@ -27,9 +41,9 @@
                 <div class="flex items-baseline">
                   <span
                     class="inline-block bg-teal-200 text-teal-800 py-1 px-4 text-xs rounded-full uppercase font-semibold tracking-wide">
-                    <ng-container *ngFor="let programmingLanguage of programmingLanguages.data">
-                      <ng-container *ngIf="programmingLanguage.id === advertisement.programmingLanguage_id">
-                        {{ programmingLanguage.languageName }}
+                    <ng-container *ngFor="let language of programmingLanguages.data">
+                      <ng-container *ngIf="language.id === advertisement.programmingLanguage_id">
+                        {{ language.languageName }}
                       </ng-container>
                     </ng-container>
                   </span>
@@ -61,3 +75,4 @@
     </ng-container>
   </div>
 </div>
+
