--- a/Frontend/src/app/components/login/login.component.html
+++ b/Frontend/src/app/components/login/login.component.html
@@ -13,30 +13,31 @@
             <input type="email" name="email" id="email"
               class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
               placeholder="name@company.com" [(ngModel)]="email" required email #emailField="ngModel">
-              <div *ngIf="emailField.invalid && (emailField.dirty || emailField.touched)" class="text-red-500">
-                <div *ngIf="emailField.errors?.['required']">
-                  Email is required
-                </div>
-                <div *ngIf="emailField.errors?.['email']">
-                  Invalid email format
-                </div>
+            <div *ngIf="emailField.invalid && (emailField.dirty || emailField.touched)" class="text-red-500">
+              <div *ngIf="emailField.errors?.['required']">
+                Email is required
               </div>
+              <div *ngIf="emailField.errors?.['email']">
+                Invalid email format
+              </div>
+            </div>
           </div>
           <div>
             <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Password</label>
             <input type="password" name="password" id="password" placeholder="••••••••"
               class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
               [(ngModel)]="password" required #passwordField="ngModel">
-              <div *ngIf="passwordField.invalid && (passwordField.dirty || passwordField.touched)" class="text-red-500">
-                <div *ngIf="passwordField.errors?.['required']">
-                  Password is required
-                </div>
+            <div *ngIf="passwordField.invalid && (passwordField.dirty || passwordField.touched)" class="text-red-500">
+              <div *ngIf="passwordField.errors?.['required']">
+                Password is required
               </div>
+            </div>
           </div>
 
+          <!-- Submit Button -->
           <button type="submit"
-            class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Sign
-            in</button>
+            class="w-full text-black bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800 dark:text-white border border-black dark:border-white">Create
+            an account</button>
           <p class="text-sm font-light text-gray-500 dark:text-gray-400">
             Don’t have an account yet? <a routerLink="/register"
               class="font-medium text-primary-600 hover:underline dark:text-primary-500">Sign up</a>
