--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -17,19 +17,21 @@
       </a>
       <a *ngIf="isLoggedIn" class="ml-2 relative" (click)="toggleDropdown()">
         <img *ngIf="user && user.img" [src]="user.img" alt="User Image" class="h-8 w-8 rounded-full">
-        <div *ngIf="showDropdown"
-          class="absolute right-0 mt-2 w-48 bg-white dark:bg-gray-900 border border-gray-200 dark:border-gray-600 rounded-lg shadow-lg z-10">
+        <div *ngIf="showDropdown" class="absolute right-0 mt-2 w-48 bg-white dark:bg-gray-900 border border-gray-200 dark:border-gray-600 rounded-lg shadow-lg z-10">
           <a *ngIf="isLoggedIn" [routerLink]="['/profile', userId]"
             class="block px-4 py-2 text-gray-800 hover:bg-gray-100 dark:text-white dark:hover:bg-gray-800">Profile</a>
           <a href="#"
             class="block px-4 py-2 text-gray-800 hover:bg-gray-100 dark:text-white dark:hover:bg-gray-800">Lista de Favoritos</a>
           <a href="#"
             class="block px-4 py-2 text-gray-800 hover:bg-gray-100 dark:text-white dark:hover:bg-gray-800">Mensajes</a>
+          <a *ngIf="isLoggedIn && user.role_id === 2" [routerLink]="['/mis-anuncios', userId]"
+            class="block px-4 py-2 text-gray-800 hover:bg-gray-100 dark:text-white dark:hover:bg-gray-800">Mis Anuncios</a>
           <a *ngIf="isLoggedIn" routerLink="/logout" class="ml-2" (click)="logout()">
             <button type="button"
               class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Logout</button>
           </a>
         </div>
+        
       </a>
     
 
