--- a/Frontend/src/app/components/profile/profile.component.html
+++ b/Frontend/src/app/components/profile/profile.component.html
@@ -42,7 +42,8 @@
         </p>
         <p class="pt-2 text-gray-600 text-xs lg:text-sm flex items-center justify-center lg:justify-start">
           <i class="fas fa-image text-green-700 pr-4"></i>
-          Image  <input type="file" accept="image/*" (change)="onFileSelected($event)">
+          Image  
+          <input type="file" accept="image/*" (change)="onFileSelected($event)">
         </p>
         
         <div class="pt-12 pb-8">
