--- a/Frontend/src/app/components/crear-anuncio/crear-anuncio.component.html
+++ b/Frontend/src/app/components/crear-anuncio/crear-anuncio.component.html
@@ -2,7 +2,7 @@
 
 <div class="bg-white border border-gray-200 rounded-lg shadow-md p-6">
     <!-- Formulario para crear un nuevo anuncio -->
-    <form (ngSubmit)="crearAnuncio()" #formularioAnuncio="ngForm">
+    <form (ngSubmit)="confirmarCreacion()" #formularioAnuncio="ngForm">
       <div class="mb-4">
         <label for="title" class="block text-gray-700 font-bold mb-2">Título</label>
         <input type="text" id="title" name="title" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" [(ngModel)]="nuevoAnuncio.title" required>
