--- a/Frontend/src/app/components/modificar-anuncio/modificar-anuncio.component.html
+++ b/Frontend/src/app/components/modificar-anuncio/modificar-anuncio.component.html
@@ -1,6 +1,6 @@
 <div class="bg-white border border-gray-200 rounded-lg shadow-md p-6">
   <h2 class="text-2xl font-bold text-gray-900 mb-4">Modificar Anuncio</h2>
-  <form *ngIf="advertisement" (submit)="updateAdvertisement()">
+  <form *ngIf="advertisement" (submit)="confirmarActualizacion()">
     <div class="mb-4">
       <label for="title" class="block text-gray-700 font-bold mb-2">Título</label>
       <input type="text" id="title" name="title" [(ngModel)]="advertisement.title" class="border border-gray-300 rounded-md px-3 py-2 w-full" />
