--- a/Frontend/src/app/components/crear-anuncio/crear-anuncio.component.html
+++ b/Frontend/src/app/components/crear-anuncio/crear-anuncio.component.html
@@ -74,9 +74,7 @@
           class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Experience</label>
       </div>
     </div>
-
-
-
+    <!-- Boton lenguajes -->
     <div class="mb-4">
       <label for="programmingLanguageId" class="block text-gray-700 font-bold mb-2 dark:text-white">Lenguaje de
         Programación</label>
@@ -89,10 +87,8 @@
         </select>
       </div>
     </div>
-
-
     <!-- Botón para enviar el formulario -->
-    <button type="submit"  class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Crear
+    <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Crear
       Anuncio</button>
   </form>
 </div>
