boton rojo y gris eliminar
rojo y gris boton

--- a/Frontend/src/app/components/profile/profile.component.html
+++ b/Frontend/src/app/components/profile/profile.component.html
@@ -56,8 +56,9 @@
             Delete
           </label>
           
-          <button type="button" (click)="deleteUser()" [class]="deleteButtonClass + ' text-white hover:bg-red-800 focus:outline-none focus:ring-4 focus:ring-red-300 font-medium rounded-full text-sm px-5 py-2.5 text-center me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900'" [disabled]="!deleteCheckbox">Eliminar</button>
-
+          <button type="button" (click)="deleteUser()" [class]="deleteButtonColor + ' text-white focus:outline-none focus:ring-4 focus:ring-red-300 font-medium rounded-full text-sm px-5 py-2.5 text-center me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900'"
+          [disabled]="!deleteCheckbox">Eliminar</button>
+        
 
         </div>
 
