cambio foto de perfil bien hecho

--- a/Frontend/src/app/components/profile/profile.component.html
+++ b/Frontend/src/app/components/profile/profile.component.html
@@ -8,8 +8,7 @@
 
       <div class="p-4 md:p-12 text-center lg:text-left">
         <div class="w-full lg:w-2/5 flex justify-center items-center mb-4">
-          <img [src]="userData.img" class="rounded-none lg:rounded-lg shadow-2xl block lg:hidden h-48 w-auto mb-4">
-          <img [src]="userData.img" class="rounded-none lg:rounded-lg shadow-2xl hidden lg:block h-auto w-48 mb-4">
+          <img [src]="userData.img" alt="Profile Image">
         </div>
         <h1 class="text-3xl font-bold pt-8 lg:pt-0">Your name</h1>
         <input type="text" id="username"
